--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,11 +3,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "befda978",
+   "id": "d115673e",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "from collections import defaultdict\n",
+    "\n",
+    "def title_case(col):\n",
+    "    return ' '.join(word.capitalize() for word in col.replace('_', ' ').split())\n",
     "\n",
     "def append_md_info_with_trace(flattened_file_path, gha_file_path,\n",
     "                              flattened_sheet=\"flattened\",\n",
@@ -20,14 +24,18 @@
     "    flat_df.columns = flat_df.columns.str.strip().str.lower()\n",
     "    gha_df.columns = gha_df.columns.str.strip().str.lower()\n",
     "\n",
+    "    # Normalize IDs\n",
     "    flat_df['employee id'] = flat_df['employee id'].astype(str).str.strip()\n",
     "    flat_df['entity manager employee id'] = flat_df['entity manager employee id'].astype(str).str.strip()\n",
     "    gha_df['employee id'] = gha_df['employee id'].astype(str).str.strip()\n",
     "    gha_df['entity manager employee id'] = gha_df['entity manager employee id'].astype(str).str.strip()\n",
-    "    gha_df['global career band'] = gha_df['global career band'].fillna('').str.upper().str.strip()\n",
+    "    gha_df['global career band'] = gha_df['global career band'].fillna('').astype(str).str.upper().str.strip()\n",
     "\n",
-    "    # Build GHA lookup\n",
-    "    gha_lookup = gha_df.set_index('employee id').to_dict('index')\n",
+    "    # Build multi-record GHA lookup\n",
+    "    gha_multi_lookup = defaultdict(list)\n",
+    "    for _, row in gha_df.iterrows():\n",
+    "        emp_id = row['employee id']\n",
+    "        gha_multi_lookup[emp_id].append(row.to_dict())\n",
     "\n",
     "    # Prepare output columns\n",
     "    flat_df['md id'] = ''\n",
@@ -43,24 +51,25 @@
     "\n",
     "        while current_mgr_id and current_mgr_id not in visited:\n",
     "            visited.add(current_mgr_id)\n",
-    "            mgr_record = gha_lookup.get(current_mgr_id)\n",
+    "            mgr_records = gha_multi_lookup.get(current_mgr_id, [])\n",
     "\n",
-    "            if mgr_record is None:\n",
+    "            if not mgr_records:\n",
     "                flat_df.at[idx, 'md trace comment'] = f\"Entity Manager ID missing in GHA: {current_mgr_id}\"\n",
     "                break\n",
     "\n",
-    "            mgr_gcb = mgr_record.get('global career band', '')\n",
-    "            if mgr_gcb == 'MD':\n",
+    "            # Try to find MD among duplicates\n",
+    "            md_record = next((r for r in mgr_records if str(r.get('global career band', '')).strip().upper() == 'MD'), None)\n",
+    "\n",
+    "            if md_record:\n",
     "                flat_df.at[idx, 'md id'] = current_mgr_id\n",
-    "                flat_df.at[idx, 'md name'] = mgr_record.get('employee name', '')\n",
+    "                flat_df.at[idx, 'md name'] = md_record.get('employee name', '')\n",
     "                flat_df.at[idx, 'md found?'] = 'Yes'\n",
     "                break\n",
     "\n",
-    "            current_mgr_id = mgr_record.get('entity manager employee id', '').strip()\n",
+    "            # Continue upward using first available manager\n",
+    "            current_mgr_id = str(mgr_records[0].get('entity manager employee id', '')).strip()\n",
     "\n",
     "    # Restore column names\n",
-    "    def title_case(col):\n",
-    "        return ' '.join(word.capitalize() for word in col.replace('_', ' ').split())\n",
     "    flat_df.columns = [title_case(col) for col in flat_df.columns]\n",
     "\n",
     "    # Save output\n",
@@ -74,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9ecfa61",
+   "id": "8d64421c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16a89e7a",
+   "id": "5c8324b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20cc2169",
+   "id": "01604ecd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa61a294",
+   "id": "5ca37a55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d53cadd7",
+   "id": "c9a2b500",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -521,7 +530,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5b36ae7",
+   "id": "c45e1205",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,7 +588,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e9d5624",
+   "id": "5ed0ac2b",
    "metadata": {},
    "outputs": [],
    "source": [
