--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d115673e",
+   "id": "9d829085",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,11 +24,11 @@
     "    flat_df.columns = flat_df.columns.str.strip().str.lower()\n",
     "    gha_df.columns = gha_df.columns.str.strip().str.lower()\n",
     "\n",
-    "    # Normalize IDs\n",
-    "    flat_df['employee id'] = flat_df['employee id'].astype(str).str.strip()\n",
-    "    flat_df['entity manager employee id'] = flat_df['entity manager employee id'].astype(str).str.strip()\n",
-    "    gha_df['employee id'] = gha_df['employee id'].astype(str).str.strip()\n",
-    "    gha_df['entity manager employee id'] = gha_df['entity manager employee id'].astype(str).str.strip()\n",
+    "    # Normalize IDs and GCBs\n",
+    "    for df in [flat_df, gha_df]:\n",
+    "        df['employee id'] = df['employee id'].astype(str).str.strip()\n",
+    "        df['entity manager employee id'] = df['entity manager employee id'].astype(str).str.strip()\n",
+    "\n",
     "    gha_df['global career band'] = gha_df['global career band'].fillna('').astype(str).str.upper().str.strip()\n",
     "\n",
     "    # Build multi-record GHA lookup\n",
@@ -46,7 +46,7 @@
     "    # Traverse each employee\n",
     "    for idx, row in flat_df.iterrows():\n",
     "        emp_id = row['employee id']\n",
-    "        current_mgr_id = row['entity manager employee id']\n",
+    "        current_mgr_id = str(row['entity manager employee id']).strip()\n",
     "        visited = set()\n",
     "\n",
     "        while current_mgr_id and current_mgr_id not in visited:\n",
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d64421c",
+   "id": "feaa0ee3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c8324b9",
+   "id": "4e0c31c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01604ecd",
+   "id": "723b8b20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ca37a55",
+   "id": "c33e8153",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9a2b500",
+   "id": "20d4e47a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,7 +530,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c45e1205",
+   "id": "397d0275",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,7 +588,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ed0ac2b",
+   "id": "86ce2b85",
    "metadata": {},
    "outputs": [],
    "source": [
