--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d829085",
+   "id": "371d29fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,6 +12,9 @@
     "\n",
     "def title_case(col):\n",
     "    return ' '.join(word.capitalize() for word in col.replace('_', ' ').split())\n",
+    "\n",
+    "def clean_id(val):\n",
+    "    return str(val).strip().replace('\\xa0', '').replace('\\u200b', '').replace('\\r', '').replace('\\n', '')\n",
     "\n",
     "def append_md_info_with_trace(flattened_file_path, gha_file_path,\n",
     "                              flattened_sheet=\"flattened\",\n",
@@ -24,10 +27,10 @@
     "    flat_df.columns = flat_df.columns.str.strip().str.lower()\n",
     "    gha_df.columns = gha_df.columns.str.strip().str.lower()\n",
     "\n",
-    "    # Normalize IDs and GCBs\n",
+    "    # Clean and normalize IDs\n",
     "    for df in [flat_df, gha_df]:\n",
-    "        df['employee id'] = df['employee id'].astype(str).str.strip()\n",
-    "        df['entity manager employee id'] = df['entity manager employee id'].astype(str).str.strip()\n",
+    "        df['employee id'] = df['employee id'].apply(clean_id)\n",
+    "        df['entity manager employee id'] = df['entity manager employee id'].apply(clean_id)\n",
     "\n",
     "    gha_df['global career band'] = gha_df['global career band'].fillna('').astype(str).str.upper().str.strip()\n",
     "\n",
@@ -45,8 +48,8 @@
     "\n",
     "    # Traverse each employee\n",
     "    for idx, row in flat_df.iterrows():\n",
-    "        emp_id = row['employee id']\n",
-    "        current_mgr_id = str(row['entity manager employee id']).strip()\n",
+    "        emp_id = clean_id(row['employee id'])\n",
+    "        current_mgr_id = clean_id(row['entity manager employee id'])\n",
     "        visited = set()\n",
     "\n",
     "        while current_mgr_id and current_mgr_id not in visited:\n",
@@ -67,7 +70,7 @@
     "                break\n",
     "\n",
     "            # Continue upward using first available manager\n",
-    "            current_mgr_id = str(mgr_records[0].get('entity manager employee id', '')).strip()\n",
+    "            current_mgr_id = clean_id(mgr_records[0].get('entity manager employee id', ''))\n",
     "\n",
     "    # Restore column names\n",
     "    flat_df.columns = [title_case(col) for col in flat_df.columns]\n",
@@ -83,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "feaa0ee3",
+   "id": "0ebe1559",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e0c31c0",
+   "id": "e3bfaa40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "723b8b20",
+   "id": "24ba602b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c33e8153",
+   "id": "f8b567c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20d4e47a",
+   "id": "522b9c7e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "397d0275",
+   "id": "961ca7a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,7 +591,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86ce2b85",
+   "id": "89c814a4",
    "metadata": {},
    "outputs": [],
    "source": [
