--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,6 +3,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6a539f0a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def normalize_id(val):\n",
+    "    try:\n",
+    "        return str(int(str(val).strip())).zfill(8)\n",
+    "    except:\n",
+    "        return ''\n",
+    "    \n",
+    "flat_df['employee id'] = flat_df['employee id'].apply(normalize_id)\n",
+    "flat_df['entity manager employee id'] = flat_df['entity manager employee id'].apply(normalize_id)\n",
+    "gha_df['employee id'] = gha_df['employee id'].apply(normalize_id)\n",
+    "gha_df['entity manager employee id'] = gha_df['entity manager employee id'].apply(normalize_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "371d29fa",
    "metadata": {},
    "outputs": [],
