--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,7 +3,92 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a539f0a",
+   "id": "72906037",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "def normalize_id(val):\n",
+    "    try:\n",
+    "        return str(int(str(val).strip())).zfill(8)\n",
+    "    except:\n",
+    "        return ''\n",
+    "\n",
+    "def title_case(col):\n",
+    "    return ' '.join(word.capitalize() for word in col.replace('_', ' ').split())\n",
+    "\n",
+    "def build_summary_and_trend(enriched_path, output_path=\"phase3_summary_and_trend.xlsx\"):\n",
+    "    df = pd.read_excel(enriched_path)\n",
+    "    df.columns = df.columns.str.strip().str.lower()\n",
+    "    df.rename(columns={col: title_case(col) for col in df.columns}, inplace=True)\n",
+    "\n",
+    "    # Normalize IDs and Month\n",
+    "    df['Employee Id'] = df['Employee Id'].apply(normalize_id)\n",
+    "    df['Entity Manager Employee Id'] = df['Entity Manager Employee Id'].apply(normalize_id)\n",
+    "    df['Md Id'] = df['Md Id'].apply(normalize_id)\n",
+    "    df['Month'] = pd.to_datetime(df['Month'], errors='coerce').dt.to_period('M').astype(str)\n",
+    "\n",
+    "    # Normalize Workstyle column\n",
+    "    df['Workstyle Met?'] = df['Workstyle Met?'].astype(str).str.strip().str.lower()\n",
+    "\n",
+    "    # Split valid and broken chains\n",
+    "    valid_df = df[df['Md Found?'] == 'Yes']\n",
+    "    broken_df = df[df['Md Found?'] == 'No']\n",
+    "\n",
+    "    # 🧩 MD Summary\n",
+    "    summary = []\n",
+    "    for (md_id, md_name), group in valid_df.groupby(['Md Id', 'Md Name']):\n",
+    "        total = len(group)\n",
+    "        gcb_counts = group['Global Career Band'].value_counts().to_dict()\n",
+    "        gcb_breakdown = ', '.join([f\"{k}: {v}\" for k, v in gcb_counts.items()])\n",
+    "        departments = group['Department'].dropna().unique().tolist() if 'Department' in group.columns else []\n",
+    "        broken_count = len(broken_df[broken_df['Entity Manager Employee Id'].isin(group['Employee Id'])])\n",
+    "\n",
+    "        summary.append({\n",
+    "            'MD ID': md_id,\n",
+    "            'MD Name': md_name,\n",
+    "            'Total Employees': total,\n",
+    "            'GCB Breakdown': gcb_breakdown,\n",
+    "            'Departments': ', '.join(departments),\n",
+    "            'Broken Chains': broken_count\n",
+    "        })\n",
+    "\n",
+    "    summary_df = pd.DataFrame(summary)\n",
+    "\n",
+    "    # 📊 Monthly Trend\n",
+    "    trend = df.groupby('Month').agg(\n",
+    "        Headcount=('Employee Id', 'nunique'),\n",
+    "        Workstyle_Met=('Workstyle Met?', lambda x: (x == 'yes').sum())\n",
+    "    ).reset_index()\n",
+    "\n",
+    "    trend['% Met'] = (trend['Workstyle_Met'] / trend['Headcount'] * 100).round(2)\n",
+    "    trend['MoM Change %'] = trend['% Met'].diff().round(2)\n",
+    "\n",
+    "    # 📝 Save both to one sheet\n",
+    "    with pd.ExcelWriter(output_path, engine='xlsxwriter') as writer:\n",
+    "        workbook = writer.book\n",
+    "        worksheet = workbook.add_worksheet('Summary & Trend')\n",
+    "        writer.sheets['Summary & Trend'] = worksheet\n",
+    "\n",
+    "        # Write MD Summary\n",
+    "        summary_df.to_excel(writer, sheet_name='Summary & Trend', startrow=1, startcol=0, index=False)\n",
+    "        worksheet.write(0, 0, 'MD Summary')\n",
+    "\n",
+    "        # Write Trend below\n",
+    "        startrow = len(summary_df) + 4\n",
+    "        trend.to_excel(writer, sheet_name='Summary & Trend', startrow=startrow + 1, startcol=0, index=False)\n",
+    "        worksheet.write(startrow, 0, 'Monthly Trend')\n",
+    "\n",
+    "    print(f\"✅ Summary and trend saved to '{output_path}'.\")\n",
+    "    return summary_df, trend\n",
+    "build_summary_and_trend(\"phase2_flattened_with_md_trace.xlsx\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b42de9b9",
    "metadata": {},
    "outputs": [],
    "source": [
