--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,11 +3,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72906037",
+   "id": "5c6685fb",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import re\n",
     "\n",
     "def normalize_id(val):\n",
     "    try:\n",
@@ -18,31 +19,46 @@
     "def title_case(col):\n",
     "    return ' '.join(word.capitalize() for word in col.replace('_', ' ').split())\n",
     "\n",
-    "def build_summary_and_trend(enriched_path, output_path=\"phase3_summary_and_trend.xlsx\"):\n",
-    "    df = pd.read_excel(enriched_path)\n",
-    "    df.columns = df.columns.str.strip().str.lower()\n",
-    "    df.rename(columns={col: title_case(col) for col in df.columns}, inplace=True)\n",
+    "def build_summary_and_trend_from_flattened(flattened_path, output_path=\"phase3_summary_and_trend.xlsx\"):\n",
+    "    df = pd.read_excel(flattened_path)\n",
+    "    df.columns = df.columns.str.strip()\n",
     "\n",
-    "    # Normalize IDs and Month\n",
+    "    # Normalize key columns\n",
+    "    df.rename(columns={col: title_case(col) for col in df.columns}, inplace=True)\n",
     "    df['Employee Id'] = df['Employee Id'].apply(normalize_id)\n",
     "    df['Entity Manager Employee Id'] = df['Entity Manager Employee Id'].apply(normalize_id)\n",
     "    df['Md Id'] = df['Md Id'].apply(normalize_id)\n",
-    "    df['Month'] = pd.to_datetime(df['Month'], errors='coerce').dt.to_period('M').astype(str)\n",
     "\n",
-    "    # Normalize Workstyle column\n",
-    "    df['Workstyle Met?'] = df['Workstyle Met?'].astype(str).str.strip().str.lower()\n",
+    "    # 🧩 Extract Workstyle Met columns\n",
+    "    workstyle_cols = [col for col in df.columns if re.match(r'Workstyle Met - ', col)]\n",
+    "    melted = df.melt(id_vars=['Employee Id', 'Md Id', 'Md Name', 'Md Found?', 'Global Career Band', 'Department', 'Bf Level'],\n",
+    "                     value_vars=workstyle_cols,\n",
+    "                     var_name='Month',\n",
+    "                     value_name='Workstyle Met')\n",
     "\n",
-    "    # Split valid and broken chains\n",
+    "    # 🧼 Clean month and values\n",
+    "    melted['Month'] = melted['Month'].str.replace('Workstyle Met - ', '').str.strip()\n",
+    "    melted['Workstyle Met'] = melted['Workstyle Met'].astype(str).str.strip().str.lower()\n",
+    "\n",
+    "    # 📊 Monthly Trend\n",
+    "    trend = melted.groupby('Month').agg(\n",
+    "        Headcount=('Employee Id', 'nunique'),\n",
+    "        Workstyle_Met=('Workstyle Met', lambda x: (x == 'yes').sum())\n",
+    "    ).reset_index()\n",
+    "\n",
+    "    trend['% Met'] = (trend['Workstyle_Met'] / trend['Headcount'] * 100).round(2)\n",
+    "    trend['MoM Change %'] = trend['% Met'].diff().round(2)\n",
+    "\n",
+    "    # 🧩 MD Summary\n",
     "    valid_df = df[df['Md Found?'] == 'Yes']\n",
     "    broken_df = df[df['Md Found?'] == 'No']\n",
     "\n",
-    "    # 🧩 MD Summary\n",
     "    summary = []\n",
     "    for (md_id, md_name), group in valid_df.groupby(['Md Id', 'Md Name']):\n",
     "        total = len(group)\n",
     "        gcb_counts = group['Global Career Band'].value_counts().to_dict()\n",
     "        gcb_breakdown = ', '.join([f\"{k}: {v}\" for k, v in gcb_counts.items()])\n",
-    "        departments = group['Department'].dropna().unique().tolist() if 'Department' in group.columns else []\n",
+    "        departments = group['Department'].dropna().unique().tolist()\n",
     "        broken_count = len(broken_df[broken_df['Entity Manager Employee Id'].isin(group['Employee Id'])])\n",
     "\n",
     "        summary.append({\n",
@@ -55,15 +71,6 @@
     "        })\n",
     "\n",
     "    summary_df = pd.DataFrame(summary)\n",
-    "\n",
-    "    # 📊 Monthly Trend\n",
-    "    trend = df.groupby('Month').agg(\n",
-    "        Headcount=('Employee Id', 'nunique'),\n",
-    "        Workstyle_Met=('Workstyle Met?', lambda x: (x == 'yes').sum())\n",
-    "    ).reset_index()\n",
-    "\n",
-    "    trend['% Met'] = (trend['Workstyle_Met'] / trend['Headcount'] * 100).round(2)\n",
-    "    trend['MoM Change %'] = trend['% Met'].diff().round(2)\n",
     "\n",
     "    # 📝 Save both to one sheet\n",
     "    with pd.ExcelWriter(output_path, engine='xlsxwriter') as writer:\n",
@@ -78,17 +85,17 @@
     "        # Write Trend below\n",
     "        startrow = len(summary_df) + 4\n",
     "        trend.to_excel(writer, sheet_name='Summary & Trend', startrow=startrow + 1, startcol=0, index=False)\n",
-    "        worksheet.write(startrow, 0, 'Monthly Trend')\n",
+    "        worksheet.write(startrow, 0, 'Monthly Workstyle Trend')\n",
     "\n",
     "    print(f\"✅ Summary and trend saved to '{output_path}'.\")\n",
     "    return summary_df, trend\n",
-    "build_summary_and_trend(\"phase2_flattened_with_md_trace.xlsx\")"
+    "build_summary_and_trend_from_flattened(\"phase2_flattened_with_md_trace.xlsx\")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b42de9b9",
+   "id": "a8c57a9a",
    "metadata": {},
    "outputs": [],
    "source": [
