--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c6685fb",
+   "id": "c60380bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,10 +31,13 @@
     "\n",
     "    # 🧩 Extract Workstyle Met columns\n",
     "    workstyle_cols = [col for col in df.columns if re.match(r'Workstyle Met - ', col)]\n",
-    "    melted = df.melt(id_vars=['Employee Id', 'Md Id', 'Md Name', 'Md Found?', 'Global Career Band', 'Department', 'Bf Level'],\n",
-    "                     value_vars=workstyle_cols,\n",
-    "                     var_name='Month',\n",
-    "                     value_name='Workstyle Met')\n",
+    "    melted = df.melt(\n",
+    "        id_vars=['Employee Id', 'Md Id', 'Md Name', 'Md Found?', 'Global Career Band', 'Bf Level'] +\n",
+    "                [f'Bf Level {i} Name' for i in range(1, 6)],\n",
+    "        value_vars=workstyle_cols,\n",
+    "        var_name='Month',\n",
+    "        value_name='Workstyle Met'\n",
+    "    )\n",
     "\n",
     "    # 🧼 Clean month and values\n",
     "    melted['Month'] = melted['Month'].str.replace('Workstyle Met - ', '').str.strip()\n",
@@ -58,7 +61,7 @@
     "        total = len(group)\n",
     "        gcb_counts = group['Global Career Band'].value_counts().to_dict()\n",
     "        gcb_breakdown = ', '.join([f\"{k}: {v}\" for k, v in gcb_counts.items()])\n",
-    "        departments = group['Department'].dropna().unique().tolist()\n",
+    "        bf5_units = group['Bf Level 5 Name'].dropna().unique().tolist()\n",
     "        broken_count = len(broken_df[broken_df['Entity Manager Employee Id'].isin(group['Employee Id'])])\n",
     "\n",
     "        summary.append({\n",
@@ -66,7 +69,7 @@
     "            'MD Name': md_name,\n",
     "            'Total Employees': total,\n",
     "            'GCB Breakdown': gcb_breakdown,\n",
-    "            'Departments': ', '.join(departments),\n",
+    "            'BF Level 5 Units': ', '.join(bf5_units),\n",
     "            'Broken Chains': broken_count\n",
     "        })\n",
     "\n",
@@ -88,14 +91,13 @@
     "        worksheet.write(startrow, 0, 'Monthly Workstyle Trend')\n",
     "\n",
     "    print(f\"✅ Summary and trend saved to '{output_path}'.\")\n",
-    "    return summary_df, trend\n",
-    "build_summary_and_trend_from_flattened(\"phase2_flattened_with_md_trace.xlsx\")\n"
+    "    return summary_df, trend"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8c57a9a",
+   "id": "b5e09941",
    "metadata": {},
    "outputs": [],
    "source": [
