--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c60380bc",
+   "id": "f83dae26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,27 +23,54 @@
     "    df = pd.read_excel(flattened_path)\n",
     "    df.columns = df.columns.str.strip()\n",
     "\n",
-    "    # Normalize key columns\n",
+    "    # Normalize column names\n",
     "    df.rename(columns={col: title_case(col) for col in df.columns}, inplace=True)\n",
+    "\n",
+    "    # Normalize IDs\n",
     "    df['Employee Id'] = df['Employee Id'].apply(normalize_id)\n",
     "    df['Entity Manager Employee Id'] = df['Entity Manager Employee Id'].apply(normalize_id)\n",
-    "    df['Md Id'] = df['Md Id'].apply(normalize_id)\n",
+    "    if 'Md Id' in df.columns:\n",
+    "        df['Md Id'] = df['Md Id'].apply(normalize_id)\n",
+    "    else:\n",
+    "        df['Md Id'] = ''\n",
     "\n",
-    "    # 🧩 Extract Workstyle Met columns\n",
+    "    # 🧩 MD Summary with GCB 3 → GCB 4 breakdown\n",
+    "    valid_df = df[df['Md Found?'] == 'Yes']\n",
+    "    summary = []\n",
+    "\n",
+    "    for (md_id, md_name), group in valid_df.groupby(['Md Id', 'Md Name']):\n",
+    "        gcb3 = group[group['Global Career Band'].str.upper() == 'GCB 3']\n",
+    "        gcb4 = group[group['Global Career Band'].str.upper() == 'GCB 4']\n",
+    "\n",
+    "        gcb3_count = len(gcb3)\n",
+    "        gcb4_count = len(gcb4)\n",
+    "\n",
+    "        # GCB 4 under GCB 3\n",
+    "        gcb4_under_gcb3 = gcb4[gcb4['Entity Manager Employee Id'].isin(gcb3['Employee Id'])]\n",
+    "\n",
+    "        summary.append({\n",
+    "            'MD ID': md_id,\n",
+    "            'MD Name': md_name,\n",
+    "            'GCB 3 Count': gcb3_count,\n",
+    "            'GCB 4 Count': gcb4_count,\n",
+    "            'GCB 4 under GCB 3': len(gcb4_under_gcb3),\n",
+    "            'Total Employees': len(group)\n",
+    "        })\n",
+    "\n",
+    "    summary_df = pd.DataFrame(summary)\n",
+    "\n",
+    "    # 🧩 Monthly Workstyle Trend\n",
     "    workstyle_cols = [col for col in df.columns if re.match(r'Workstyle Met - ', col)]\n",
     "    melted = df.melt(\n",
-    "        id_vars=['Employee Id', 'Md Id', 'Md Name', 'Md Found?', 'Global Career Band', 'Bf Level'] +\n",
-    "                [f'Bf Level {i} Name' for i in range(1, 6)],\n",
+    "        id_vars=['Employee Id', 'Bf Level', 'Md Id', 'Md Name'] + [f'Bf Level {i} Name' for i in range(1, 6)],\n",
     "        value_vars=workstyle_cols,\n",
     "        var_name='Month',\n",
     "        value_name='Workstyle Met'\n",
     "    )\n",
     "\n",
-    "    # 🧼 Clean month and values\n",
     "    melted['Month'] = melted['Month'].str.replace('Workstyle Met - ', '').str.strip()\n",
     "    melted['Workstyle Met'] = melted['Workstyle Met'].astype(str).str.strip().str.lower()\n",
     "\n",
-    "    # 📊 Monthly Trend\n",
     "    trend = melted.groupby('Month').agg(\n",
     "        Headcount=('Employee Id', 'nunique'),\n",
     "        Workstyle_Met=('Workstyle Met', lambda x: (x == 'yes').sum())\n",
@@ -51,29 +78,6 @@
     "\n",
     "    trend['% Met'] = (trend['Workstyle_Met'] / trend['Headcount'] * 100).round(2)\n",
     "    trend['MoM Change %'] = trend['% Met'].diff().round(2)\n",
-    "\n",
-    "    # 🧩 MD Summary\n",
-    "    valid_df = df[df['Md Found?'] == 'Yes']\n",
-    "    broken_df = df[df['Md Found?'] == 'No']\n",
-    "\n",
-    "    summary = []\n",
-    "    for (md_id, md_name), group in valid_df.groupby(['Md Id', 'Md Name']):\n",
-    "        total = len(group)\n",
-    "        gcb_counts = group['Global Career Band'].value_counts().to_dict()\n",
-    "        gcb_breakdown = ', '.join([f\"{k}: {v}\" for k, v in gcb_counts.items()])\n",
-    "        bf5_units = group['Bf Level 5 Name'].dropna().unique().tolist()\n",
-    "        broken_count = len(broken_df[broken_df['Entity Manager Employee Id'].isin(group['Employee Id'])])\n",
-    "\n",
-    "        summary.append({\n",
-    "            'MD ID': md_id,\n",
-    "            'MD Name': md_name,\n",
-    "            'Total Employees': total,\n",
-    "            'GCB Breakdown': gcb_breakdown,\n",
-    "            'BF Level 5 Units': ', '.join(bf5_units),\n",
-    "            'Broken Chains': broken_count\n",
-    "        })\n",
-    "\n",
-    "    summary_df = pd.DataFrame(summary)\n",
     "\n",
     "    # 📝 Save both to one sheet\n",
     "    with pd.ExcelWriter(output_path, engine='xlsxwriter') as writer:\n",
@@ -85,7 +89,7 @@
     "        summary_df.to_excel(writer, sheet_name='Summary & Trend', startrow=1, startcol=0, index=False)\n",
     "        worksheet.write(0, 0, 'MD Summary')\n",
     "\n",
-    "        # Write Trend below\n",
+    "        # Write Monthly Trend below\n",
     "        startrow = len(summary_df) + 4\n",
     "        trend.to_excel(writer, sheet_name='Summary & Trend', startrow=startrow + 1, startcol=0, index=False)\n",
     "        worksheet.write(startrow, 0, 'Monthly Workstyle Trend')\n",
@@ -97,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5e09941",
+   "id": "07dea762",
    "metadata": {},
    "outputs": [],
    "source": [
