--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,7 +3,105 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f83dae26",
+   "id": "2c9530ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import re\n",
+    "\n",
+    "def normalize_id(val):\n",
+    "    try:\n",
+    "        return str(int(str(val).strip())).zfill(8)\n",
+    "    except:\n",
+    "        return ''\n",
+    "\n",
+    "def title_case(col):\n",
+    "    return ' '.join(word.capitalize() for word in col.replace('_', ' ').split())\n",
+    "\n",
+    "def build_summary_and_trend_from_flattened(flattened_path, output_path=\"phase3_summary_and_trend.xlsx\"):\n",
+    "    df = pd.read_excel(flattened_path)\n",
+    "    df.columns = df.columns.str.strip()\n",
+    "\n",
+    "    # Normalize column names\n",
+    "    df.rename(columns={col: title_case(col) for col in df.columns}, inplace=True)\n",
+    "\n",
+    "    # Normalize IDs\n",
+    "    df['Employee Id'] = df['Employee Id'].apply(normalize_id)\n",
+    "    df['Entity Manager Employee Id'] = df['Entity Manager Employee Id'].apply(normalize_id)\n",
+    "\n",
+    "    # Detect MD ID column\n",
+    "    md_id_col = next((col for col in df.columns if col.strip().lower() == 'md id'), None)\n",
+    "    if md_id_col:\n",
+    "        df[md_id_col] = df[md_id_col].apply(normalize_id)\n",
+    "    else:\n",
+    "        df['Md Id'] = ''\n",
+    "\n",
+    "    # 🧩 MD Summary with GCB 3 → GCB 4 breakdown\n",
+    "    valid_df = df[df['Md Found?'] == 'Yes']\n",
+    "    summary = []\n",
+    "\n",
+    "    for (md_id, md_name), group in valid_df.groupby([md_id_col or 'Md Id', 'Md Name']):\n",
+    "        gcb3 = group[group['Global Career Band'].str.upper() == 'GCB 3']\n",
+    "        gcb4 = group[group['Global Career Band'].str.upper() == 'GCB 4']\n",
+    "        gcb4_under_gcb3 = gcb4[gcb4['Entity Manager Employee Id'].isin(gcb3['Employee Id'])]\n",
+    "\n",
+    "        summary.append({\n",
+    "            'MD ID': md_id,\n",
+    "            'MD Name': md_name,\n",
+    "            'GCB 3 Count': len(gcb3),\n",
+    "            'GCB 4 Count': len(gcb4),\n",
+    "            'GCB 4 under GCB 3': len(gcb4_under_gcb3),\n",
+    "            'Total Employees': len(group)\n",
+    "        })\n",
+    "\n",
+    "    summary_df = pd.DataFrame(summary)\n",
+    "\n",
+    "    # 🧩 Monthly Workstyle Trend\n",
+    "    workstyle_cols = [col for col in df.columns if re.search(r'Workstyle Met\\?\\s*\\(avg Days\\)', col, re.IGNORECASE)]\n",
+    "    melted = df.melt(\n",
+    "        id_vars=['Employee Id', 'Bf Level', 'Md Name'] + [f'Bf Level {i} Name' for i in range(1, 6)],\n",
+    "        value_vars=workstyle_cols,\n",
+    "        var_name='Raw Month',\n",
+    "        value_name='Workstyle Met'\n",
+    "    )\n",
+    "\n",
+    "    # Extract month from column names like \"Sep-25 Workstyle Met? (avg Days)\"\n",
+    "    melted['Month'] = melted['Raw Month'].str.extract(r'(^\\w{3}-\\d{2})')[0]\n",
+    "    melted['Workstyle Met'] = pd.to_numeric(melted['Workstyle Met'], errors='coerce')\n",
+    "\n",
+    "    trend = melted.groupby('Month').agg(\n",
+    "        Headcount=('Employee Id', 'nunique'),\n",
+    "        Workstyle_Met=('Workstyle Met', lambda x: x.notna().sum())\n",
+    "    ).reset_index()\n",
+    "\n",
+    "    trend['% Met'] = (trend['Workstyle_Met'] / trend['Headcount'] * 100).round(2)\n",
+    "    trend['MoM Change %'] = trend['% Met'].diff().round(2)\n",
+    "\n",
+    "    # 📝 Save both to one sheet\n",
+    "    with pd.ExcelWriter(output_path, engine='xlsxwriter') as writer:\n",
+    "        workbook = writer.book\n",
+    "        worksheet = workbook.add_worksheet('Summary & Trend')\n",
+    "        writer.sheets['Summary & Trend'] = worksheet\n",
+    "\n",
+    "        # Write MD Summary\n",
+    "        summary_df.to_excel(writer, sheet_name='Summary & Trend', startrow=1, startcol=0, index=False)\n",
+    "        worksheet.write(0, 0, 'MD Summary')\n",
+    "\n",
+    "        # Write Monthly Trend below\n",
+    "        startrow = len(summary_df) + 4\n",
+    "        trend.to_excel(writer, sheet_name='Summary & Trend', startrow=startrow + 1, startcol=0, index=False)\n",
+    "        worksheet.write(startrow, 0, 'Monthly Workstyle Trend')\n",
+    "\n",
+    "    print(f\"✅ Summary and trend saved to '{output_path}'.\")\n",
+    "    return summary_df, trend\n",
+    "build_summary_and_trend_from_flattened(\"phase2_flattened_with_md_trace.xlsx\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa3f652e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07dea762",
+   "id": "846d92f7",
    "metadata": {},
    "outputs": [],
    "source": [
