--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c9530ba",
+   "id": "58691d17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,8 +42,8 @@
     "    summary = []\n",
     "\n",
     "    for (md_id, md_name), group in valid_df.groupby([md_id_col or 'Md Id', 'Md Name']):\n",
-    "        gcb3 = group[group['Global Career Band'].str.upper() == 'GCB 3']\n",
-    "        gcb4 = group[group['Global Career Band'].str.upper() == 'GCB 4']\n",
+    "        gcb3 = group[group['Global Career Band'] == '3']\n",
+    "        gcb4 = group[group['Global Career Band'] == '4']\n",
     "        gcb4_under_gcb3 = gcb4[gcb4['Entity Manager Employee Id'].isin(gcb3['Employee Id'])]\n",
     "\n",
     "        summary.append({\n",
@@ -60,7 +60,7 @@
     "    # 🧩 Monthly Workstyle Trend\n",
     "    workstyle_cols = [col for col in df.columns if re.search(r'Workstyle Met\\?\\s*\\(avg Days\\)', col, re.IGNORECASE)]\n",
     "    melted = df.melt(\n",
-    "        id_vars=['Employee Id', 'Bf Level', 'Md Name'] + [f'Bf Level {i} Name' for i in range(1, 6)],\n",
+    "        id_vars=['Employee Id', 'Md Name'] + [f'Bf Level {i} Name' for i in range(1, 6)],\n",
     "        value_vars=workstyle_cols,\n",
     "        var_name='Raw Month',\n",
     "        value_name='Workstyle Met'\n",
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa3f652e",
+   "id": "ad46be38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "846d92f7",
+   "id": "1f30ca23",
    "metadata": {},
    "outputs": [],
    "source": [
