--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,6 +3,61 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f4d52042",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import re\n",
+    "\n",
+    "def normalize_id(val):\n",
+    "    try:\n",
+    "        return str(int(str(val).strip())).zfill(8)\n",
+    "    except:\n",
+    "        return ''\n",
+    "\n",
+    "def build_pivotable_trend_table(flattened_path, output_path=\"pivotable_trend_table.xlsx\"):\n",
+    "    df = pd.read_excel(flattened_path)\n",
+    "    df.columns = df.columns.str.strip()\n",
+    "\n",
+    "    # Normalize column names\n",
+    "    df.rename(columns={col: col.strip() for col in df.columns}, inplace=True)\n",
+    "\n",
+    "    # Normalize IDs\n",
+    "    df['Employee Id'] = df['Employee Id'].apply(normalize_id)\n",
+    "    df['Entity Manager Employee Id'] = df['Entity Manager Employee Id'].apply(normalize_id)\n",
+    "    if 'Md Id' in df.columns:\n",
+    "        df['Md Id'] = df['Md Id'].apply(normalize_id)\n",
+    "    else:\n",
+    "        df['Md Id'] = ''\n",
+    "\n",
+    "    # Filter only valid MD traced employees\n",
+    "    df_valid = df[df['Md Found?'].astype(str).str.strip().str.lower() == 'yes'].copy()\n",
+    "\n",
+    "    # Detect Workstyle columns like \"Sep-25 Workstyle Met? (avg Days)\"\n",
+    "    workstyle_cols = [col for col in df_valid.columns if re.search(r'Workstyle Met\\?\\s*\\(avg Days\\)', col, re.IGNORECASE)]\n",
+    "\n",
+    "    # Melt into long format\n",
+    "    melted = df_valid.melt(\n",
+    "        id_vars=['Employee Id', 'Md Id', 'Md Name'] + [f'Bf Level {i} Name' for i in range(1, 6)],\n",
+    "        value_vars=workstyle_cols,\n",
+    "        var_name='Raw Month',\n",
+    "        value_name='Workstyle Met'\n",
+    "    )\n",
+    "\n",
+    "    # Extract month and clean values\n",
+    "    melted['Month'] = melted['Raw Month'].str.extract(r'(^\\w{3}-\\d{2})')[0]\n",
+    "    melted['Workstyle Met'] = melted['Workstyle Met'].astype(str).str.strip().str.lower()\n",
+    "\n",
+    "    # Save to Excel\n",
+    "    melted.to_excel(output_path, index=False)\n",
+    "    print(f\"📊 Pivotable trend table saved to '{output_path}'. Use this to build your styled pivot.\")\n",
+    "    return melted"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "3b2d9e6c",
    "metadata": {},
    "outputs": [],
