--- a/Split_Tool.ipynb
+++ b/Split_Tool.ipynb
@@ -14,14 +14,8 @@
     "    return f\"{prefix}_{''.join(c if c.isalnum() else '_' for c in name.strip())}\"\n",
     "\n",
     "def update_cascading_dropdowns(file_path: str, selected_l2: str, wb, ws_options, ws_l2, ws_l3, ws_l4):\n",
-    "    # Corrected column mapping from Options sheet\n",
-    "    col_l2 = \"E\"  # Business Service L2\n",
-    "    col_l3 = \"F\"  # Business Framework Group\n",
-    "    col_l4 = \"G\"  # Business Framework\n",
-    "\n",
-    "    # Collect mappings\n",
-    "    l2_to_l3 = {}\n",
-    "    l3_to_l4 = {}\n",
+    "    col_l2, col_l3, col_l4 = \"E\", \"F\", \"G\"\n",
+    "    l2_to_l3, l3_to_l4 = {}, {}\n",
     "\n",
     "    for row in ws_options.iter_rows(min_row=2, max_row=ws_options.max_row):\n",
     "        l2_val = row[ord(col_l2) - ord('A')].value\n",
@@ -29,43 +23,27 @@
     "        l4_val = row[ord(col_l4) - ord('A')].value\n",
     "\n",
     "        if l2_val and l3_val:\n",
-    "            l2_key = str(l2_val).strip()\n",
-    "            l3_item = str(l3_val).strip()\n",
-    "            l2_to_l3.setdefault(l2_key, set()).add(l3_item)\n",
-    "\n",
+    "            l2_to_l3.setdefault(str(l2_val).strip(), set()).add(str(l3_val).strip())\n",
     "        if l3_val and l4_val:\n",
-    "            l3_key = str(l3_val).strip()\n",
-    "            l4_item = str(l4_val).strip()\n",
-    "            l3_to_l4.setdefault(l3_key, set()).add(l4_item)\n",
+    "            l3_to_l4.setdefault(str(l3_val).strip(), set()).add(str(l4_val).strip())\n",
     "\n",
-    "    # Get selected L2\n",
     "    selected_l2 = selected_l2.strip()\n",
     "    matched_l3 = sorted(l2_to_l3.get(selected_l2, []))\n",
     "    matched_l4 = sorted(set(l4 for l3 in matched_l3 for l4 in l3_to_l4.get(l3, [])))\n",
     "\n",
-    "    # Clear Options!A:C\n",
     "    for col in [\"A\", \"B\", \"C\"]:\n",
     "        for cell in ws_options[col][2:]:\n",
     "            cell.value = None\n",
     "\n",
-    "    # Populate Options!A with selected L2\n",
     "    ws_options[\"A3\"] = selected_l2\n",
-    "\n",
-    "    # Populate Options!B with matched L3s\n",
     "    for i, val in enumerate(matched_l3, start=3):\n",
     "        ws_options[f\"B{i}\"] = val\n",
     "\n",
-    "    # Populate Options!C with matched L4s\n",
-    "    for i, val in enumerate(matched_l4, start=3):\n",
-    "        ws_options[f\"C{i}\"] = val\n",
-    "\n",
-    "    # Create named range for selected L2 → L3s\n",
     "    if matched_l3:\n",
     "        name_l2 = sanitize_name(selected_l2, \"L2\")\n",
     "        range_l3 = f\"Options!$B$3:$B${2 + len(matched_l3)}\"\n",
-    "        wb.defined_names.append(DefinedName(name=name_l2, attr_text=range_l3))\n",
+    "        wb.defined_names.add(DefinedName(name=name_l2, attr_text=range_l3))\n",
     "\n",
-    "    # Create named ranges for each L3 → L4s\n",
     "    start_row = 3\n",
     "    for l3_val in matched_l3:\n",
     "        l4_list = sorted(l3_to_l4.get(l3_val, []))\n",
@@ -73,39 +51,33 @@
     "            ws_options[f\"C{i}\"] = val\n",
     "        name_l3 = sanitize_name(l3_val, \"L3\")\n",
     "        range_l4 = f\"Options!$C${start_row}:$C${start_row + len(l4_list) - 1}\"\n",
-    "        wb.defined_names.append(DefinedName(name=name_l3, attr_text=range_l4))\n",
+    "        wb.defined_names.add(DefinedName(name=name_l3, attr_text=range_l4))\n",
     "        start_row += len(l4_list)\n",
     "\n",
-    "    # Update L2 View!B1\n",
-    "    if ws_l2[\"B1\"].coordinate in ws_l2.merged_cells:\n",
-    "        ws_l2.unmerge_cells(\"B1:C1\")\n",
+    "    if matched_l3:\n",
+    "        ws_l3[\"B1\"] = matched_l3[0]\n",
+    "    if matched_l4:\n",
+    "        ws_l4[\"B1\"] = matched_l4[0]\n",
+    "\n",
+    "    ws_l2.unmerge_cells(\"B1:C1\")\n",
     "    ws_l2.merge_cells(\"B1:C1\")\n",
     "    ws_l2[\"B1\"] = selected_l2\n",
     "\n",
-    "    # Add reactive dropdown to L3 View!B1\n",
-    "    if ws_l3[\"B1\"].coordinate in ws_l3.merged_cells:\n",
-    "        ws_l3.unmerge_cells(\"B1:C1\")\n",
-    "    ws_l3.merge_cells(\"B1:C1\")\n",
+    "    ws_l3.unmerge_cells(\"B1:C1\")\n",
     "    ws_l3.data_validations.dataValidation.clear()\n",
-    "    dv_l3 = DataValidation(type=\"list\", formula1='=INDIRECT(\"L2_\" & B1)', showDropDown=False)\n",
-    "    dv_l3.error = \"Invalid selection.\"\n",
-    "    dv_l3.prompt = \"Choose L3 based on selected L2\"\n",
+    "    dv_l3 = DataValidation(type=\"list\", formula1='=INDIRECT(\"L2_\" & B1)', showDropDown=True)\n",
     "    ws_l3.add_data_validation(dv_l3)\n",
     "    dv_l3.add(ws_l3[\"B1\"])\n",
+    "    ws_l3.merge_cells(\"B1:C1\")\n",
     "\n",
-    "    # Add reactive dropdown to L4 View!B1\n",
-    "    if ws_l4[\"B1\"].coordinate in ws_l4.merged_cells:\n",
-    "        ws_l4.unmerge_cells(\"B1:C1\")\n",
-    "    ws_l4.merge_cells(\"B1:C1\")\n",
+    "    ws_l4.unmerge_cells(\"B1:C1\")\n",
     "    ws_l4.data_validations.dataValidation.clear()\n",
-    "    dv_l4 = DataValidation(type=\"list\", formula1='=INDIRECT(\"L3_\" & B1)', showDropDown=False)\n",
-    "    dv_l4.error = \"Invalid selection.\"\n",
-    "    dv_l4.prompt = \"Choose L4 based on selected L3\"\n",
+    "    dv_l4 = DataValidation(type=\"list\", formula1='=INDIRECT(\"L3_\" & B1)', showDropDown=True)\n",
     "    ws_l4.add_data_validation(dv_l4)\n",
     "    dv_l4.add(ws_l4[\"B1\"])\n",
+    "    ws_l4.merge_cells(\"B1:C1\")\n",
     "\n",
-    "    print(f\"✅ Cascading dropdowns updated for: {file_path}\")\n",
-    "    "
+    "    print(f\"✅ Cascading dropdowns updated for: {file_path}\")"
    ]
   },
   {
