--- a/Split_Tool.ipynb
+++ b/Split_Tool.ipynb
@@ -3,6 +3,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2b760dc1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "from openpyxl import load_workbook\n",
+    "\n",
+    "def update_cell_in_all_excels(folder_path):\n",
+    "    for filename in os.listdir(folder_path):\n",
+    "        if filename.endswith(\".xlsx\"):\n",
+    "            file_path = os.path.join(folder_path, filename)\n",
+    "            wb = load_workbook(file_path)\n",
+    "            ws = wb.worksheets[0]  # First sheet\n",
+    "            ws[\"A10\"] = \"Setting for Sep'25\"\n",
+    "            wb.save(file_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "12612d8a",
    "metadata": {},
    "outputs": [],
