--- a/Split_Tool.ipynb
+++ b/Split_Tool.ipynb
@@ -3,21 +3,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b760dc1",
+   "id": "511ad3b8",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "from openpyxl import load_workbook\n",
+    "import xlwings as xw\n",
     "\n",
-    "def update_cell_in_all_excels(folder_path):\n",
+    "def update_cell_preserving_validations(folder_path):\n",
     "    for filename in os.listdir(folder_path):\n",
     "        if filename.endswith(\".xlsx\"):\n",
     "            file_path = os.path.join(folder_path, filename)\n",
-    "            wb = load_workbook(file_path)\n",
-    "            ws = wb.worksheets[0]  # First sheet\n",
-    "            ws[\"A10\"] = \"Setting for Sep'25\"\n",
-    "            wb.save(file_path)"
+    "            app = xw.App(visible=False)\n",
+    "            wb = app.books.open(file_path)\n",
+    "            ws = wb.sheets[0]  # First sheet\n",
+    "            ws.range(\"A10\").value = \"Setting for Sep'25\"\n",
+    "            wb.save()\n",
+    "            wb.close()\n",
+    "            app.quit()"
    ]
   },
   {
